--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "font-awesome": "^4.7.0",
     "primeng": "^4.1.0-rc.3",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "@angular/cli": "^1.1.1",
+    "@angular/compiler-cli": "^4.0.0"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.1",
-    "@angular/compiler-cli": "^4.0.0",
+    
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
